--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@
   VITE_storageBucket=localchefbazaar-b1365.firebasestorage.app
   VITE_messagingSenderId=832086507754
   VITE_appId=1:832086507754:web:8adf8515acf11ba8c99793
+
+  VITE_IMGBB_API_KEY=3a79ea804939dc284cf871bc163ae65b
