User save in the database done

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
   VITE_appId=1:832086507754:web:8adf8515acf11ba8c99793
 
   VITE_IMGBB_API_KEY=3a79ea804939dc284cf871bc163ae65b
+  VITE_SERVER_Domain= http://localhost:3000/
