--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "daisyui": "^5.5.8",
     "firebase": "^12.6.0",
     "lucide-react": "^0.556.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
@@ -27,6 +28,7 @@
     "react-spinners": "^0.17.0",
     "recharts": "^3.6.0",
     "sweetalert2": "^11.26.4",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
