--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "daisyui": "^5.5.8",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.556.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
